

Improved Debug CPU Window:
-Mouse accions: click (toggle breakpoint, change registers), scrolling up/down by using the mouse wheel
-Improve window refresh when pressing keys on non-step mode
-Preserve step mode when assembling
-Added new key to set PC=PTR
-Added new key to go to next breakpoint type PC=dir
-Allow to define up to 100 breakpoints (same that you could define using ZRCP)

Improved Debugging:
-Can now browse Basic variables on ZX Spectrum, ZX81 and ZX80
-Added Window View Sensors to graph internal emulation sensors, performance, statistics, etc
-Added command line setting to load source code

Improved ZX Vision menu interface:
-Machine manufacturer list is now sorted by name (instead of some kind of mixed age and type)
-Added setting to pause cpu emulation on menu when multitask active
-Added Degraded ZX Desktop Fill Type
-Added button on footer to switch ZX Desktop
-Added Accessibility->GUI settings as a quick way to enable some GUI enhancements: high contrast style, hotkeys, etc
-Show in file selector when a file can be expanded
-Improved screen file previews: any file size of 6912 bytes is guessed as Spectrum screen
-Maximizing windows now take care of size of ZX Desktop, when setting "Open menu on ZX Desktop" is enabled
-Added item to reduce+rearrange windows
-Added some graphical meters on AY Registers, Core Statistics
-Colour palette window now shows all colours that fit in the window
-View sprite legend now adapts to size
-Added setting to disable boxes around lower and upper ZX Desktop Buttons
-Added support for accentuated characters

Improved Next emulation:
-Turbo setting: make it by default limited on NextZXOS
-ZSF snapshots include all info from port 123b (previous TBBlue .zsf snapshots are incompatible with this version, sorry!)
-Added a splash message when changing Layer 2 modes

Improved Text Aventure Features: 
-Improved detection of Daad aventures on debugging